--- a/README
+++ b/README
@@ -288,7 +288,7 @@ LuaSNMP
 
   Please send your comments and bug reports to the Lua mailing list.
 
-April 2006 (Dec 2008, July 2009)
+April 2006 (Dec 2008, July 2009, March 2010)
 
 Have fun.
 
