adopted to NET-SNMP 5.7.2 and Lua 5.2

--- a/FAQ
+++ b/FAQ
@@ -19,4 +19,4 @@ LuaSNMP - Frequently asked questions
    Nehab. This library (or an extra one) may be a better home for ICMP
    as well.
 
-Bye.
+herbert.leuwer@gmx.de
